@@ -7,6 +7,7 @@ import qualified IR.Weak as Weak
 import Juvix.Library (IO)
 import qualified Test.Tasty as T
 import Typechecker (coreCheckerEval)
+import qualified Utility
 
 coreTests :: T.TestTree
 coreTests =
@@ -23,7 +24,8 @@ allCheckedTests =
     [ coreTests,
       erasureTests,
       Weak.top,
-      HR.Pretty.top
+      HR.Pretty.top,
+      Utility.top
     ]
 
 main :: IO ()
